harden SSE delivery, replay, and client lifecycle
- Fix subscription and replay races, retry deadlocks, and scheduler starvation
- Add configurable replay limits and dropped-retry callbacks
- Fix emitter completion and subscription cleanup
- Simplify delivery and SSE encoding; validate event metadata
- Repair Error Prone configuration and expand CI and documentation
- Add regression coverage for concurrency, retries, reconnects, and CRLF